# better_bing_image_downloader

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
better_bing_image_downloader/: __init__.py  base.py  bing.py  crawler.py  download.py  downloader.py  duckduckgo.py  helperdownload.py  manifest.py  multidownloader.py  results.py  utils.py
docs/superpowers/specs/: 2026-06-13-v3-5-0-manifest-design.md
tests/: test_atomic_write.py  test_bing.py  test_download.py  test_duckduckgo.py  test_engine.py  test_features.py  test_helperdownload.py  test_integrability.py  test_utils.py  test_v3_2_0_api.py  test_v3_2_0_integration.py  test_v3_2_1_robustness.py  test_v3_3_0_features.py  test_v3_4_0_features.py  test_v3_5_0_manifest.py  test_v3_6_0_features.py
