[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "better-bing-image-downloader"
version = "3.1.0"
description = "Bulk image downloader from Bing or DuckDuckGo (no browser required)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Krishnatejaswi S", email = "shentharkrishnatejaswi@gmail.com" }]
requires-python = ">=3.8"
keywords = [
    "bing", "duckduckgo", "images", "scraping",
    "image download", "bulk image downloader",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.60.0",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
duckduckgo = [
    "brotli>=1.0.0",
]
google = [
    "selenium>=4.0.0",
    "chromedriver-autoinstaller>=0.6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "twine",
    "build",
]

[project.scripts]
bbid = "better_bing_image_downloader.download:main"

[project.urls]
Homepage = "https://github.com/KTS-o7/better_bing_image_downloader"
Repository = "https://github.com/KTS-o7/better_bing_image_downloader"
Issues = "https://github.com/KTS-o7/better_bing_image_downloader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["better_bing_image_downloader*"]
