[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "better-bing-image-downloader"
version = "3.1.1"
description = "Bulk image downloader from Bing or DuckDuckGo (no browser required)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Krishnatejaswi S", email = "shentharkrishnatejaswi@gmail.com" }]
requires-python = ">=3.8"
keywords = [
    "bing", "duckduckgo", "images", "scraping",
    "image download", "bulk image downloader",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.60.0",
    "filetype>=1.2.0",
    "brotli>=1.0.0",
]

[project.optional-dependencies]
google = [
    "selenium>=4.0.0",
    "chromedriver-autoinstaller>=0.6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "twine",
    "build",
    "black>=24.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[project.scripts]
bbid = "better_bing_image_downloader.download:main"

[project.urls]
Homepage = "https://github.com/KTS-o7/better_bing_image_downloader"
Repository = "https://github.com/KTS-o7/better_bing_image_downloader"
Issues = "https://github.com/KTS-o7/better_bing_image_downloader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["better_bing_image_downloader*"]

[tool.setuptools.package-data]
better_bing_image_downloader = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [
    "better_bing_image_downloader/crawler.py",
    "better_bing_image_downloader/multidownloader.py",
    "better_bing_image_downloader/helperdownload.py",
    "better_bing_image_downloader/utils.py",
]

[tool.ruff.lint]
# Default rule set + pycodestyle warnings + bugbear + comprehensions.
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",  # line length (black handles this)
    "B008",  # function call in default argument (we use this idiomatically)
    "SIM105",  # contextlib.suppress is fine but try/except/pass is also clear
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # public API is typed, helpers are looser
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["better_bing_image_downloader"]
exclude = ["better_bing_image_downloader/crawler.py", "better_bing_image_downloader/multidownloader.py", "better_bing_image_downloader/helperdownload.py", "better_bing_image_downloader/utils.py"]
